--- a/sidebar.html
+++ b/sidebar.html
@@ -143,6 +143,13 @@
                 <span>Telegram</span>
             </a>
         </div>
+
+        </div>
+
+        <!-- Footer -->
+        <div class="sidebar-footer">
+            <div class="footer-text">MRPAY<span class="footer-accent">9</span>@MALAYSIA</div>
+            <div class="footer-text">ALL RIGHTS RESERVED</div>
         </div>
 
         <!-- Games Provider Search View -->
