--- a/sidebar.html
+++ b/sidebar.html
@@ -154,17 +154,23 @@
 
         <!-- Games Provider Search View -->
         <div id="games-provider-view" class="hidden">
-            <!-- Header with Back Button -->
-            <div class="games-header">
+            <!-- Sidebar Header -->
+            <div class="sidebar-header">
+                <div class="header-content">
+                    <div class="logo">mrpay<span class="logo-accent">9</span></div>
+                    <div class="close-btn">&times;</div>
+                </div>
+                <div class="tagline">Feel The Thrill Of Jackpot Spin At GTX33</div>
+            </div>
+
+            <!-- Scrollable Content Container -->
+            <div class="games-provider-content">
+
+            <!-- Back Button and Search Bar Row -->
+            <div class="search-container">
                 <button class="back-btn" id="back-to-main">
                     <i class="fas fa-arrow-left"></i>
                 </button>
-                <h2 class="games-title">Games Provider</h2>
-                <div class="close-btn">&times;</div>
-            </div>
-
-            <!-- Search Bar -->
-            <div class="search-container">
                 <div class="search-box">
                     <i class="fas fa-search search-icon"></i>
                     <input type="text" id="provider-search" placeholder="Search game providers..." class="search-input">
@@ -229,6 +235,13 @@
                 <a href="/gameList/WWBET/SLOT/X/X" class="provider-item" data-name="WWBET">WWBET</a>
                 <a href="/gameList/XE88/SLOT/X/X" class="provider-item" data-name="XE88">XE88</a>
                 <a href="/gameList/YEEBET/SLOT/X/X" class="provider-item" data-name="YEEBET">YEEBET</a>
+            </div>
+            </div>
+
+            <!-- Games Provider Footer -->
+            <div class="games-provider-footer">
+                <div class="footer-text">MRPAY<span class="footer-accent">9</span>@MALAYSIA</div>
+                <div class="footer-text">ALL RIGHTS RESERVED</div>
             </div>
         </div>
     </div>
