--- a/sidebar.html
+++ b/sidebar.html
@@ -33,25 +33,25 @@
         <div class="top-actions">
             <button class="action-btn" onclick="promopage(2)">
                 <div class="action-icon">
-                    <i class="fas fa-gift"></i>
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHF5dDBsMDh2OWc5N3E3ZmJtaHF5OWx6YjJxMjN5bGF6d2JuZDR4OSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l0HlBO7eyXzSZkJri/giphy.gif" alt="Lucky Spin" class="action-gif">
                 </div>
                 <div class="action-label">Lucky Spin</div>
             </button>
             <button class="action-btn" onclick="promopage(5)">
                 <div class="action-icon">
-                    <i class="fas fa-treasure-chest"></i>
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMnJ5YjJhZWNqYmtwbGI4NmFzbTQ4YXhhcGk0Zm9rbHd1ZmQ5ZGMwNCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Lopx9eUi34rbq/giphy.gif" alt="Treasure Chest" class="action-gif">
                 </div>
                 <div class="action-label">Treasure Chest</div>
             </button>
             <button class="action-btn" onclick="promopage(6)">
                 <div class="action-icon">
-                    <i class="fas fa-calendar-check"></i>
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdWdpM3FkZHE5OGc5dDl0cjFuNGZhcnN3NzRxMW80aXZrMTJ0azg3MCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/3o6Yg4GUVgIUg3bf7W/giphy.gif" alt="Daily Mission" class="action-gif">
                 </div>
                 <div class="action-label">Daily Mission</div>
             </button>
             <button class="action-btn" onclick="promopage(7)">
                 <div class="action-icon">
-                    <i class="fas fa-dice"></i>
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbTBqdzdyNjRiYXRvZGw5a2NxZ3o0cXBweHJ2YmI5ZGkwbGU3amdkayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o7TKMt1VVNkHV2PaE/giphy.gif" alt="Plinko Ball" class="action-gif">
                 </div>
                 <div class="action-label">Plinko Ball</div>
             </button>
